data/derived/fa15/progs/unify/prog0796.ml.out
Characters 70-73:
  | h::t -> h n + sumList(t);;
                         ^^^
Error: This expression has type ('a -> int) list
       but an expression was expected of type 'a
       The type variable 'a occurs inside ('a -> int) list
